# k-means

./: CMakeLists.txt  README.md  main.cpp  main_parallel.cpp  main_sequential.cpp  structure_of_array.cpp
dataset/: centroids.txt  dataset.txt
